fixed issue with ttext being too small on menu items on mobile devices. Will add JS animations to menu items and also start my drink matcher quiz next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,14 +14,14 @@ h2 {
 }
 
 p {
-  line-height: 35px;
+  line-height: 15px;
   margin-bottom: 30px;
 }
 
 @media screen and (max-width: 800px) {
   p {
     margin-bottom: 0 !important;
-    line-height: 10px;
+    line-height: 35px;
   }
 }
 
@@ -254,6 +254,19 @@ a {
   color: #fafafa !important;
 }
 
+#menu-info-button{
+   font-size: 1.5vmax !important;
+  background-color: #666666 !important;
+  border: none !important;
+  color: #fafafa !important;
+  font-family: "Montserrat", sans-serif; 
+}
+
+.navbar-toggler{
+border: none !important;
+}
+
+
 /*------------------------- Block Dividers ------------------*/
 
 .block-divider {
@@ -443,7 +456,7 @@ div#bar-map {
 .menu-gallery {
   clear: both;
   line-height: 0;
-  column-count: 2;
+  column-count: 3;
   max-width: 90%;
   margin-top: 70px;
   background-color: black;
@@ -507,10 +520,10 @@ div#bar-map {
 }
 
 .drink-info {
-  padding-top: 10%;
+  padding-top: 15px;
   word-spacing: 2px;
   padding-bottom: 10%;
-  font-size: 1vmax !important;
+  font-size: 1vmax;
 }
 
 .menu-item .drink-info {
@@ -524,7 +537,7 @@ div#bar-map {
   font-weight: bold;
   color: #fafafa;
   font-family: "Montserrat", sans-serif;
-  font-size: 1vmin 2vmax;
+  font-size: 0.8vmin 1vmax;
   overflow: hidden;
 }
 
@@ -540,36 +553,36 @@ div#bar-map {
 }
 
 .drink-info h2 {
-  margin-bottom: 30px;
-  font-size: 2.5vmax;
-}
-
-.drink-info h3 {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font-size: 2vmax;
 }
 
-.drink-info p {
+.drink-info h3 {
+  margin-bottom: 10px;
   font-size: 1.5vmax;
+}
+
+.drink-info p {
+  font-size: 1vmax;
 }
 
 @media screen and (max-width: 800px) {
   .drink-info h2 {
-    font-size: 2vmax;
-    margin-bottom: 0 !important;
+    font-size: 3vmax;
+    margin-bottom: 10px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .drink-info h3 {
-    font-size: 1.5vmax;
-    margin-bottom: 0 !important;
+    font-size: 2.5vmax;
+    margin-bottom: 10px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .drink-info p {
-    font-size: 1vmax;
+    font-size: 2vmax;
     margin-bottom: 0 !important;
   }
 }
